k8/backend/backend-deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-blue
  namespace: mern-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
      version: blue
  template:
    metadata:
      labels:
        app: backend
        version: blue
    spec:
      containers:
      - name: backend
        image: 407622020962.dkr.ecr.us-east-1.amazonaws.com/backend:3c91a11
        ports:
        - containerPort: 9000
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "300m"
            memory: "512Mi"
