k8/backend/backend-green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-green-service
  namespace: mern-prod
spec:
  selector:
    app: backend
  ports:
   - port: 5000
    targetPort: 9000
  type: ClusterIP
