k8/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: mern-prod
spec:
  selector:
    app: backend
    version: blue  
  ports:
  - port: 5000
    targetPort: 9000
  type: ClusterIP
