k8/backend/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: only-frontend-can-access-backend
  namespace: mern-prod
spec:
  podSelector:
    matchLabels:
      app: backend   
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend 
    ports:
    - protocol: TCP
      port: 9000
